# cs171-assignment3

./: CMakeLists.txt
assignment3/: assignment3.html
code/head/: directLightingIntegrator.hpp  refine.hpp  triangleMesh.hpp
head/: camera.hpp  objloader.hpp  ray.hpp  triangleMesh.hpp
report_template_latex/: assignment.tex
src/: main.cpp
